--- a/.gitignore
+++ b/.gitignore
@@ -253,3 +253,176 @@
 /src/Hjmos.CustomCharts/bin/Debug/SharpVectors.Css.dll
 /src/Hjmos.CustomCharts/bin/Debug/SharpVectors.Core.dll
 /src/Hjmos.CustomCharts/bin/Debug/SharpVectors.Converters.dll
+/src/Hjmos.CustomCharts/obj/Debug/Themes/Styles/BigDataMonitor.baml
+/src/Hjmos.CustomCharts/bin/Debug/x86/v8_context_snapshot.bin
+/src/Hjmos.CustomCharts/bin/Debug/x86/swiftshader/libGLESv2.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/swiftshader/libEGL.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/snapshot_blob.bin
+/src/Hjmos.CustomCharts/bin/Debug/x86/README.txt
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/zh-TW.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/zh-CN.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/vi.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/uk.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/tr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/th.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/te.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ta.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/sw.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/sv.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/sr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/sl.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/sk.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ru.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ro.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/pt-PT.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/pt-BR.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/pl.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/nl.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/nb.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ms.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/mr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ml.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/lv.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/lt.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ko.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/kn.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ja.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/it.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/id.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/hu.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/hr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/hi.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/he.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/gu.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/fr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/fil.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/fi.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/fa.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/et.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/es.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/es-419.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/en-US.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/en-GB.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/el.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/de.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/da.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/cs.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ca.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/bn.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/bg.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/ar.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/locales/am.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/libGLESv2.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/libEGL.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/libcef.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/icudtl.dat
+/src/Hjmos.CustomCharts/bin/Debug/x86/devtools_resources.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/d3dcompiler_47.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/chrome_elf.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/cef_extensions.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/cef_200_percent.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/cef_100_percent.pak
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.XML
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.Wpf.XML
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.Wpf.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.Wpf.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.Core.xml
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.Core.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.Core.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.BrowserSubprocess.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.BrowserSubprocess.exe
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.BrowserSubprocess.Core.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x86/CefSharp.BrowserSubprocess.Core.dll
+/src/Hjmos.CustomCharts/bin/Debug/x86/cef.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/v8_context_snapshot.bin
+/src/Hjmos.CustomCharts/bin/Debug/x64/swiftshader/libGLESv2.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/swiftshader/libEGL.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/snapshot_blob.bin
+/src/Hjmos.CustomCharts/bin/Debug/x64/README.txt
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/zh-TW.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/zh-CN.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/vi.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/uk.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/tr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/th.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/te.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ta.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/sw.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/sv.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/sr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/sl.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/sk.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ru.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ro.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/pt-PT.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/pt-BR.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/pl.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/nl.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/nb.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ms.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/mr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ml.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/lv.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/lt.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ko.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/kn.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ja.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/it.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/id.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/hu.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/hr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/hi.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/he.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/gu.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/fr.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/fil.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/fi.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/fa.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/et.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/es.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/es-419.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/en-US.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/en-GB.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/el.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/de.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/da.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/cs.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ca.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/bn.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/bg.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/ar.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/locales/am.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/libGLESv2.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/libEGL.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/libcef.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/icudtl.dat
+/src/Hjmos.CustomCharts/bin/Debug/x64/devtools_resources.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/d3dcompiler_47.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/chrome_elf.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/cef_extensions.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/cef_200_percent.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/cef_100_percent.pak
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.XML
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.Wpf.XML
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.Wpf.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.Wpf.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.Core.xml
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.Core.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.Core.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.BrowserSubprocess.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.BrowserSubprocess.exe
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.BrowserSubprocess.Core.pdb
+/src/Hjmos.CustomCharts/bin/Debug/x64/CefSharp.BrowserSubprocess.Core.dll
+/src/Hjmos.CustomCharts/bin/Debug/x64/cef.pak
+/src/Hjmos.CustomCharts/bin/Debug/Vlc.DotNet.Forms.dll
+/src/Hjmos.CustomCharts/bin/Debug/Vlc.DotNet.Core.Interops.dll
+/src/Hjmos.CustomCharts/bin/Debug/Vlc.DotNet.Core.dll
+/src/Hjmos.CustomCharts/bin/Debug/System.ValueTuple.dll
+/src/Hjmos.CustomCharts/bin/Debug/Prism.pdb
+/src/Hjmos.CustomCharts/bin/Debug/Prism.dll
+/src/Hjmos.CustomCharts/bin/Debug/Hjmos.CommonControls.pdb
+/src/Hjmos.CustomCharts/bin/Debug/Hjmos.CommonControls.dll
