--- a/Tests/Controltest/Controltest.csproj
+++ b/Tests/Controltest/Controltest.csproj
@@ -169,5 +169,9 @@
   <ItemGroup>
     <Resource Include="image\宽松.svg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="image\太阳.svg" />
+    <Resource Include="image\水滴.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
