设备告警趋势

--- a/.gitignore
+++ b/.gitignore
@@ -426,3 +426,4 @@
 /src/Hjmos.CustomCharts/bin/Debug/Prism.dll
 /src/Hjmos.CustomCharts/bin/Debug/Hjmos.CommonControls.pdb
 /src/Hjmos.CustomCharts/bin/Debug/Hjmos.CommonControls.dll
+/src/Hjmos.CustomCharts/obj/Debug/Themes/Styles/DeviceAlarmBarChart.baml
