--- a/src/Hjmos.CustomCharts/Hjmos.CustomCharts.csproj
+++ b/src/Hjmos.CustomCharts/Hjmos.CustomCharts.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Controls\AverageDailyPassengerFlowTop10.cs" />
     <Compile Include="Controls\BigDataMonitor.cs" />
+    <Compile Include="Controls\DeviceAlarmBarChart.cs" />
     <Compile Include="Controls\MoreDayPassengerFlowTrend.cs" />
     <Compile Include="Controls\PassengerFlowTrend.cs" />
     <Compile Include="Data\BigDataMonitorModel.cs" />
@@ -79,6 +80,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\Styles\BigDataMonitor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Styles\DeviceAlarmBarChart.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
