--- a/Tests/Controltest/Controltest.csproj
+++ b/Tests/Controltest/Controltest.csproj
@@ -37,6 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Mvvm.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Hjmos.UILib">
       <HintPath>..\..\..\..\..\..\A佳都工作资料\程序\HJMos_Client_Framework\Infrastructure\UIs\Hjmos.UILib\bin\Debug\Hjmos.UILib.dll</HintPath>
     </Reference>
