增加轨交定制图表控件断面客流分布图

--- a/src/Hjmos.BaseControls/Hjmos.BaseControls.csproj
+++ b/src/Hjmos.BaseControls/Hjmos.BaseControls.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Tools\Converter\Object2StringConverter.cs" />
     <Compile Include="Tools\Converter\Object2VisibilityConverter.cs" />
     <Compile Include="Tools\Converter\RectangleCircularConverter.cs" />
+    <Compile Include="Tools\Converter\String2BrushConverter.cs" />
     <Compile Include="Tools\Converter\String2GeometryConverter.cs" />
     <Compile Include="Tools\Converter\String2VisibilityConverter.cs" />
     <Compile Include="Tools\Converter\String2VisibilityReConverter.cs" />
